million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16627,4 +16627,88 @@
                     <p>通じ合う心　横山奈緒 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="26" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2690/">
+                    <img src="img/gree_2690_nf.jpg">
+                    <p>全力ﾌｧｲﾝﾌﾟﾚ- 七尾百合子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2241">
+                    <img src="img/td_2241_0_nf.jpg">
+                    <p>グランドスラムスマイル　七尾百合子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="26" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2691/">
+                    <img src="img/gree_2691_nf.jpg">
+                    <p>ｸﾞﾗﾝﾄﾞｽﾗﾑｽﾏｲﾙ 七尾百合子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2241">
+                    <img src="img/td_2241_1_nf.jpg">
+                    <p>グランドスラムスマイル　七尾百合子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1171875" idol_id="12" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card549/">
+                    <img src="img/gree_549_nf.jpg">
+                    <p>開幕ｾﾚﾓﾆｰ 双海真美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2242">
+                    <img src="img/td_2242_0_nf.jpg">
+                    <p>パワフルピンチヒッター　双海真美 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.203125" idol_id="12" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card550/">
+                    <img src="img/gree_550_nf.jpg">
+                    <p>ﾊﾟﾜﾌﾙﾋﾟﾝﾁﾋｯﾀｰ 双海真美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2242">
+                    <img src="img/td_2242_1_nf.jpg">
+                    <p>パワフルピンチヒッター　双海真美 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="25" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card545/">
+                    <img src="img/gree_545_nf.jpg">
+                    <p>ﾊﾟｰﾌｪｸﾄな守備 ﾛｺ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2243">
+                    <img src="img/td_2243_0_nf.jpg">
+                    <p>ニューウェーブコンダクター　ロコ (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1796875" idol_id="25" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card231/">
+                    <img src="img/gree_231_nf.jpg">
+                    <p>ﾆｭ-ｳｪ-ﾌﾞｺﾝﾀﾞｸﾀ- ﾛｺ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2243">
+                    <img src="img/td_2243_1_nf.jpg">
+                    <p>ニューウェーブコンダクター　ロコ (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
