--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6193,4 +6193,28 @@ body, div, a {
                     <img src="img/td_2228 024ann0434_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2237">
+                    <img src="img/td_2237 006mak0374_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2237">
+                    <img src="img/td_2237 006mak0374_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2238">
+                    <img src="img/td_2238 017kth0444_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2238">
+                    <img src="img/td_2238 017kth0444_1.jpg">
+                </a>
+            </div>
         </div></body></html>
