million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16711,4 +16711,60 @@
                     <p>ニューウェーブコンダクター　ロコ (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card305/">
+                    <img src="img/gree_305_nf.jpg">
+                    <p>導きのｽﾃ-ｼﾞ 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2260">
+                    <img src="img/td_2260_0_nf.jpg">
+                    <p>騎士への労わり　天空橋朋花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.125" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card309/">
+                    <img src="img/gree_309_nf.jpg">
+                    <p>騎士への労わり　天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2260">
+                    <img src="img/td_2260_1_nf.jpg">
+                    <p>騎士への労わり　天空橋朋花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="50" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card344/">
+                    <img src="img/gree_344_nf.jpg">
+                    <p>ﾗｲﾌﾞにかける情熱 ｼﾞｭﾘｱ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2261">
+                    <img src="img/td_2261_0_nf.jpg">
+                    <p>アツいのはお好き？　ジュリア (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="50" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card738/">
+                    <img src="img/gree_738_nf.jpg">
+                    <p>ｱﾂいのはお好き? ｼﾞｭﾘｱ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2261">
+                    <img src="img/td_2261_1_nf.jpg">
+                    <p>アツいのはお好き？　ジュリア (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
