--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6217,4 +6217,28 @@ body, div, a {
                     <img src="img/td_2238 017kth0444_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2257">
+                    <img src="img/td_2257 016tsu0474_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2257">
+                    <img src="img/td_2257 016tsu0474_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2258">
+                    <img src="img/td_2258 046rio0424_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2258">
+                    <img src="img/td_2258 046rio0424_1.jpg">
+                </a>
+            </div>
         </div></body></html>
