million: update data

--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6241,4 +6241,28 @@ body, div, a {
                     <img src="img/td_2258 046rio0424_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2264">
+                    <img src="img/td_2264 029umi0484_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2264">
+                    <img src="img/td_2264 029umi0484_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2265">
+                    <img src="img/td_2265 020meg0464_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2265">
+                    <img src="img/td_2265 020meg0464_1.jpg">
+                </a>
+            </div>
         </div></body></html>
