million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16767,4 +16767,32 @@
                     <p>アツいのはお好き？　ジュリア (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2777/">
+                    <img src="img/gree_2777_nf.jpg">
+                    <p>ﾒｲｸは抜かりなく! 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2271">
+                    <img src="img/td_2271_0_nf.jpg">
+                    <p>営業のごあいさつ♪　伊吹翼 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2778/">
+                    <img src="img/gree_2778_nf.jpg">
+                    <p>営業のごあいさつ♪ 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2271">
+                    <img src="img/td_2271_1_nf.jpg">
+                    <p>営業のごあいさつ♪　伊吹翼 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
