--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6265,4 +6265,28 @@ body, div, a {
                     <img src="img/td_2265 020meg0464_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2269">
+                    <img src="img/td_2269 027say0454_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2269">
+                    <img src="img/td_2269 027say0454_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2270">
+                    <img src="img/td_2270 042miy0434_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2270">
+                    <img src="img/td_2270 042miy0434_1.jpg">
+                </a>
+            </div>
         </div></body></html>
