--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6289,4 +6289,28 @@ body, div, a {
                     <img src="img/td_2270 042miy0434_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2279">
+                    <img src="img/td_2279 039kon0434_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2279">
+                    <img src="img/td_2279 039kon0434_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2280">
+                    <img src="img/td_2280 044miz0474_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2280">
+                    <img src="img/td_2280 044miz0474_1.jpg">
+                </a>
+            </div>
         </div></body></html>
