million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16824,6 +16824,34 @@
                 </a>
             </div>
         </div>
+        <div class="parent" similarity="0.234375" idol_id="1" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1743/">
+                    <img src="img/gree_1743_nf.jpg">
+                    <p>笑顔のﾊﾟﾚ-ﾄﾞ 天海春香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2284">
+                    <img src="img/td_2284_0_nf.jpg">
+                    <p>かわいい悪戯　天海春香 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2265625" idol_id="1" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1744/">
+                    <img src="img/gree_1744_nf.jpg">
+                    <p>かわいい悪戯 天海春香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2284">
+                    <img src="img/td_2284_1_nf.jpg">
+                    <p>かわいい悪戯　天海春香 (特訓後)</p>
+                </a>
+            </div>
+        </div>
         <div class="parent" similarity="0.171875" idol_id="5" >
             <div class="sub">
                 <a href="http://mill.tokyo/vi/card2304/">
