million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16879,4 +16879,60 @@
                     <p>スペシャルご褒美　高槻やよい (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="41" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2409/">
+                    <img src="img/gree_2409_nf.jpg">
+                    <p>春の女神さま 豊川風花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2289">
+                    <img src="img/td_2289_0_nf.jpg">
+                    <p>春の女神さま　豊川風花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="41" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2410/">
+                    <img src="img/gree_2410_nf.jpg">
+                    <p>bitter sweet 豊川風花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2289">
+                    <img src="img/td_2289_1_nf.jpg">
+                    <p>春の女神さま　豊川風花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2734375" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2407/">
+                    <img src="img/gree_2407_nf.jpg">
+                    <p>陽気な春の歌 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2290">
+                    <img src="img/td_2290_0_nf.jpg">
+                    <p>恥じらいルームウェア　如月千早 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1171875" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card617/">
+                    <img src="img/gree_617_nf.jpg">
+                    <p>恥じらいﾙｰﾑｳｪｱ 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2290">
+                    <img src="img/td_2290_1_nf.jpg">
+                    <p>恥じらいルームウェア　如月千早 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
