--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6313,4 +6313,28 @@ body, div, a {
                     <img src="img/td_2280 044miz0474_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2286">
+                    <img src="img/td_2286 013hib0394_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2286">
+                    <img src="img/td_2286 013hib0394_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2287">
+                    <img src="img/td_2287 023aka0424_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2287">
+                    <img src="img/td_2287 023aka0424_1.jpg">
+                </a>
+            </div>
         </div></body></html>
