million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16935,4 +16935,116 @@
                     <p>恥じらいルームウェア　如月千早 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="15" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2307/">
+                    <img src="img/gree_2307_nf.jpg">
+                    <p>ﾊﾟ-ﾌｪｸﾄﾁｭ-ﾝ 最上静香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2321">
+                    <img src="img/td_2321_0_nf.jpg">
+                    <p>パーフェクトチューン　最上静香 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="15" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2308/">
+                    <img src="img/gree_2308_nf.jpg">
+                    <p>Precious Grain 最上静香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2321">
+                    <img src="img/td_2321_1_nf.jpg">
+                    <p>パーフェクトチューン　最上静香 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.203125" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1104/">
+                    <img src="img/gree_1104_nf.jpg">
+                    <p>戦う司令官 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2333">
+                    <img src="img/td_2333_0_nf.jpg">
+                    <p>勝利の女神　如月千早 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2421875" idol_id="2" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1105/">
+                    <img src="img/gree_1105_nf.jpg">
+                    <p>勝利の女神 如月千早</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2333">
+                    <img src="img/td_2333_1_nf.jpg">
+                    <p>勝利の女神　如月千早 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1102/">
+                    <img src="img/gree_1102_nf.jpg">
+                    <p>天翔ける戦姫 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2334">
+                    <img src="img/td_2334_0_nf.jpg">
+                    <p>乙女の恥じらい　野々原茜 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1103/">
+                    <img src="img/gree_1103_nf.jpg">
+                    <p>乙女の恥じらい 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2334">
+                    <img src="img/td_2334_1_nf.jpg">
+                    <p>乙女の恥じらい　野々原茜 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="36" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1098/">
+                    <img src="img/gree_1098_nf.jpg">
+                    <p>絶叫!ｺﾁｮｺﾁｮ地獄 矢吹可奈</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2335">
+                    <img src="img/td_2335_0_nf.jpg">
+                    <p>ユニットトーナメントトリオ　矢吹可奈 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="36" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card837/">
+                    <img src="img/gree_837_nf.jpg">
+                    <p>ﾕﾆｯﾄﾄ-ﾅﾒﾝﾄﾄﾘｵ 矢吹可奈</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2335">
+                    <img src="img/td_2335_1_nf.jpg">
+                    <p>ユニットトーナメントトリオ　矢吹可奈 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
