chore: Add new links to the Million related page

--- a/million/index.html
+++ b/million/index.html
@@ -41,8 +41,10 @@
     <h2>Million related</h2>
     <h3><a href="card/">グリマス vs ミリシタ card illustration comparison</a></h3>
     <h3><a href="ssr/">ミリシタ all SSR card illustrations quick view</a></h3>
+    <h3><a href="pixiv/">ミリオンライブ character Pixiv artwork data</a></h3>
     <h3><a href="greemas/www.bandainamcoent.co.jp/cs/list/idolmaster/million_live/">グリマス HP mirror</a></h3>
     <h3><a href="poplinks/poplinks.idolmaster-official.jp/">ポプマス HP mirror</a></h3>
     <h3><a href="act4bingo/">ML10thAct4セトリ予想ビンゴメーカー</a></h3>
+    <h3><a href="ranking.html">ミリシタランキング</a></h3>
 </body>
 </html>
