--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6385,4 +6385,28 @@ body, div, a {
                     <img src="img/td_2330 041fuk0434_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2336">
+                    <img src="img/td_2336 025roc0434_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2336">
+                    <img src="img/td_2336 025roc0434_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2337">
+                    <img src="img/td_2337 026yur0474_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2337">
+                    <img src="img/td_2337 026yur0474_1.jpg">
+                </a>
+            </div>
         </div></body></html>
