million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17103,4 +17103,32 @@
                     <p>キューティーラビット　百瀬莉緒 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3037/">
+                    <img src="img/gree_3037_nf.jpg">
+                    <p>そよ風に吹かれて 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2348">
+                    <img src="img/td_2348_0_nf.jpg">
+                    <p>そよ風に吹かれて　箱崎星梨花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3038/">
+                    <img src="img/gree_3038_nf.jpg">
+                    <p>夢色ﾄﾚｲﾝ 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2348">
+                    <img src="img/td_2348_1_nf.jpg">
+                    <p>そよ風に吹かれて　箱崎星梨花 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
